--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="update_data">Update data</string>
     <string name="delete_data">Delete data</string>
     <string name="query_data">Query data</string>
+    <string name="contentprovider_demo">contentProvider_demo</string>
 </resources>
